# todo-assistant

./: .dockerignore  .gitignore  Dockerfile  Makefile  Readme.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-image.yml
app/: db.py  main.py  notifications.py  schemas.py  workflows.py
app/static/: index.html
docs/: dbos.md  orchestration-ladder.md
migrations/: 001_init.sql
tests/: _crash_victim.py  conftest.py  test_crud.py  test_workflow.py
