[project]
name = "todo-assistant"
version = "0.1.0"
description = "Proactive todo assistant — a DBOS learning project"
requires-python = ">=3.11"
dependencies = [
    "dbos>=2.22",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0.43",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
